--- a/style.css
+++ b/style.css
@@ -1,4 +1,24 @@
-image {
-    border: none;
-    margin: 45px 0px 0px;
+img {
+    box-sizing: border-box;
+    display: inline-block;
+    margin-top: 115px;
+    margin-left: 38%;
+    margin-right: 37%;
+}
+
+input {
+    margin-left:29%;
+    margin-right: 29%;
+    margin-top:20px;
+    width: 502px;
+    text-rendering: auto;
+    color: initial;
+    letter-spacing: normal;
+    word-spacing: normal;
+    text-transform: none;
+    text-indent: 0px;
+    text-shadow: none;
+    display: inline-block;
+    text-align: start;
+    font: 400 11px;
 }
