--- a/style.css
+++ b/style.css
@@ -6,6 +6,43 @@ img {
     margin-right: 37%;
 }
 
+ul {
+    list-style: none;
+}
+
+#nav_bar {
+    float: right;
+}
+
+#nav_bar li {
+    display: inline-block;
+    padding: 8px;
+}
+
+#nav_bar #sign_in {
+    background: #4887ef; 
+    margin-right: 25px;
+    padding: 7px 15px;
+    border-radius: 3px; 
+    font-weight: bold;
+}
+
+.nav-links {
+    color: #404040;
+}
+
+a {
+    text-decoration: none;
+}
+
+li.nav-links a:hover {
+    text-decoration: underline;
+}
+
+#sign_in:hover { 
+    box-shadow: 1px 1px 5px #999;
+}
+
 input {
     margin-left:29%;
     margin-right: 29%;
